--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node": ">=18"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
